--- a/chooseYourOwnAdventure/src/byui/cit260/chooseYourOwnAdventure/frames/RaftFrame.form
+++ b/chooseYourOwnAdventure/src/byui/cit260/chooseYourOwnAdventure/frames/RaftFrame.form
@@ -109,6 +109,7 @@
         <Component class="javax.swing.JButton" name="jButton1">
           <Properties>
             <Property name="text" type="java.lang.String" value="Can I Build"/>
+            <Property name="actionCommand" type="java.lang.String" value="Can I Build?"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="jButton2">
