--- a/chooseYourOwnAdventure/src/byui/cit260/chooseYourOwnAdventure/frames/RaftFrame.form
+++ b/chooseYourOwnAdventure/src/byui/cit260/chooseYourOwnAdventure/frames/RaftFrame.form
@@ -116,6 +116,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Launch Raft!"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
+          </Events>
         </Component>
         <Container class="javax.swing.JScrollPane" name="jScrollPane1">
           <AuxValues>
